Add ftp php extension and make sure up til php 8.4 images are built

--- a/conf/cli/normal.yaml
+++ b/conf/cli/normal.yaml
@@ -46,3 +46,9 @@ images:
       php82-xdebug:
         phpVersion: '8.2'
         phpVersionNumeric: 82
+      php83-xdebug:
+        phpVersion: '8.3'
+        phpVersionNumeric: 83
+      php84-xdebug:
+        phpVersion: '8.4'
+        phpVersionNumeric: 84
