remove references to shyim's repository

--- a/conf/apache/dev.yaml
+++ b/conf/apache/dev.yaml
@@ -1,7 +1,7 @@
 images:
   -
     image: 
-      - ghcr.io/shyim/shopware-docker/5/apache
+      - ghcr.io/daniel-memo-ict/shopware-docker/5/apache
     buildTags: [ 'apache' ]
     dockerFile: apache/Dockerfile
     context: apache
@@ -14,9 +14,12 @@ images:
       php80:
         phpVersion: '8.0'
         phpVersionNumeric: 80
+      php81:
+        phpVersion: '8.1'
+        phpVersionNumeric: 81
   -
     image: 
-      - ghcr.io/shyim/shopware-docker/6/apache
+      - ghcr.io/daniel-memo-ict/shopware-docker/6/apache
     buildTags: [ 'apache' ]
     dockerFile: apache/Dockerfile
     context: apache
@@ -32,3 +35,12 @@ images:
       php81:
         phpVersion: '8.1'
         phpVersionNumeric: 81
+      php82:
+        phpVersion: '8.2'
+        phpVersionNumeric: 82
+      php83:
+        phpVersion: '8.3'
+        phpVersionNumeric: 83
+      php84:
+        phpVersion: '8.4'
+        phpVersionNumeric: 84
