--- a/conf/nginx/blackfire.yaml
+++ b/conf/nginx/blackfire.yaml
@@ -1,7 +1,7 @@
 images:
   -
     image: 
-      - ghcr.io/shyim/shopware-docker/5/nginx
+      - ghcr.io/daniel-memo-ict/shopware-docker/5/nginx
     buildTags: [ 'blackfire' ]
     dockerFile: nginx/Dockerfile
     context: nginx 
@@ -20,7 +20,7 @@ images:
         phpVersionNumeric: 81
   -
     image: 
-      - ghcr.io/shyim/shopware-docker/6/nginx
+      - ghcr.io/daniel-memo-ict/shopware-docker/6/nginx
     buildTags: [ 'blackfire' ]
     dockerFile: nginx/Dockerfile
     context: nginx 
@@ -40,3 +40,9 @@ images:
       php82-blackfire:
         phpVersion: '8.2'
         phpVersionNumeric: 82
+      php83-blackfire:
+        phpVersion: '8.3'
+        phpVersionNumeric: 83
+      php84-blackfire:
+        phpVersion: '8.4'
+        phpVersionNumeric: 84
