--- a/conf/cli/normal.yaml
+++ b/conf/cli/normal.yaml
@@ -8,6 +8,15 @@ images:
     templates:
       cli/Dockerfile.twig: cli/Dockerfile
     tags:
+      php72:
+        phpVersion: '7.2'
+        phpVersionNumeric: 72
+      php73:
+        phpVersion: '7.3'
+        phpVersionNumeric: 73
+      php74:
+        phpVersion: '7.4'
+        phpVersionNumeric: 74
       php80:
         phpVersion: '8.0'
         phpVersionNumeric: 80
@@ -34,10 +43,16 @@ images:
     templates:
       cli/Dockerfile.twig: cli/Dockerfile
     tags:
+      php72-xdebug:
+        phpVersion: '7.2'
+        phpVersionNumeric: 72
+      php73-xdebug:
+        phpVersion: '7.3'
+        phpVersionNumeric: 73
+      php74-xdebug:
+        phpVersion: '7.4'
+        phpVersionNumeric: 74
       php80-xdebug:
-        phpVersion: '8.0'
-        phpVersionNumeric: 80
-      php80-xdebug3:
         phpVersion: '8.0'
         phpVersionNumeric: 80
       php81-xdebug:
