--- a/conf/nginx/blackfire.yaml
+++ b/conf/nginx/blackfire.yaml
@@ -12,6 +12,15 @@ images:
       blackfire: true
       APP_DOCUMENT_ROOT: '/var/www/html'
     tags:
+      php72-blackfire:
+        phpVersion: '7.2'
+        phpVersionNumeric: 72
+      php73-blackfire:
+        phpVersion: '7.3'
+        phpVersionNumeric: 73
+      php74-blackfire:
+        phpVersion: '7.4'
+        phpVersionNumeric: 74
       php80-blackfire:
         phpVersion: '8.0'
         phpVersionNumeric: 80
@@ -31,6 +40,15 @@ images:
       blackfire: true
       APP_DOCUMENT_ROOT: '/var/www/html/public'
     tags:
+      php72-blackfire:
+        phpVersion: '7.2'
+        phpVersionNumeric: 72
+      php73-blackfire:
+        phpVersion: '7.3'
+        phpVersionNumeric: 73
+      php74-blackfire:
+        phpVersion: '7.4'
+        phpVersionNumeric: 74
       php80-blackfire:
         phpVersion: '8.0'
         phpVersionNumeric: 80
