--- a/conf/nginx/production.yaml
+++ b/conf/nginx/production.yaml
@@ -12,6 +12,15 @@ images:
       production: true
       APP_DOCUMENT_ROOT: '/var/www/html'
     tags:
+      php72:
+        phpVersion: '7.2'
+        phpVersionNumeric: 72
+      php73:
+        phpVersion: '7.3'
+        phpVersionNumeric: 73
+      php74:
+        phpVersion: '7.4'
+        phpVersionNumeric: 74
       php80:
         phpVersion: '8.0'
         phpVersionNumeric: 80
@@ -31,6 +40,15 @@ images:
       production: true
       APP_DOCUMENT_ROOT: '/var/www/html/public'
     tags:
+      php72:
+        phpVersion: '7.2'
+        phpVersionNumeric: 72
+      php73:
+        phpVersion: '7.3'
+        phpVersionNumeric: 73
+      php74:
+        phpVersion: '7.4'
+        phpVersionNumeric: 74
       php80:
         phpVersion: '8.0'
         phpVersionNumeric: 80
