--- a/conf/nginx/xdebug.yaml
+++ b/conf/nginx/xdebug.yaml
@@ -12,6 +12,15 @@ images:
       xdebug: 3
       APP_DOCUMENT_ROOT: '/var/www/html'
     tags:
+      php72-xdebug:
+        phpVersion: '7.2'
+        phpVersionNumeric: 72
+      php73-xdebug:
+        phpVersion: '7.3'
+        phpVersionNumeric: 73
+      php74-xdebug:
+        phpVersion: '7.4'
+        phpVersionNumeric: 74
       php80-xdebug:
         phpVersion: '8.0'
         phpVersionNumeric: 80
@@ -31,10 +40,16 @@ images:
       xdebug: 3
       APP_DOCUMENT_ROOT: '/var/www/html/public'
     tags:
+      php72-xdebug:
+        phpVersion: '7.2'
+        phpVersionNumeric: 72
+      php73-xdebug:
+        phpVersion: '7.3'
+        phpVersionNumeric: 73
+      php74-xdebug:
+        phpVersion: '7.4'
+        phpVersionNumeric: 74
       php80-xdebug:
-        phpVersion: '8.0'
-        phpVersionNumeric: 80
-      php80-xdebug3:
         phpVersion: '8.0'
         phpVersionNumeric: 80
       php81-xdebug:
